restart: Jalview 2.10.2b2 min java=v8, v9 compatibility, heap size autoconf, version string setting (#6633)
* -Djava.headless=true not required if —-headless is provided

* set max memory, java 9 module config and java class path

* JDK 8 minimum recommended version (allows Java 9 module path to be specified)

* upper bound on jdk + build number bump

* psutil needed for run-time memory allocation calculation

* -nodisplay not —-headless

* java 8/9 expect : separator for jars on class path on linux/osx (windows may need require different separator)

* extra java 9 add-modules arg

* set jalview build version and remove git version data

* variable fixed in ant call